5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1593_1804.log
== TEST (2019-03-26 11:21:45) 
-- CODE:
from math import*
xa = float(input("lol: "))
xb = float(input("dota: "))
ya = float(input("smite: "))
yb = float(input("hots: "))

dab = abs(sqrt((xb-xa)**2)+(yb+ya)**2)
print(round(dab,3))
-- OUTPUT:
6109.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:23:35) 
-- CODE:
from math import*
xa = float(input("linha1: "))
xb = float(input("linha2: "))
ya = float(input("linha3: "))
yb = float(input("linha4: "))

dab = abs(sqrt((xb-xa)**2)+(yb+ya)**2)
print(round(dab,3))
-- OUTPUT:
6109.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:24:44) 
-- CODE:
from math import*
xa = float(input("linha1: "))
xb = float(input("linha2: "))
ya = float(input("linha3: "))
yb = float(input("linha4: "))

dab = abs(sqrt((xb-xa)**2+(yb+ya)**2)
print(round(dab,3))
-- ERROR:
File "XXXX", line 8
    print(round(dab,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:25:06) 
-- CODE:
from math import*
xa = float(input("linha1: "))
xb = float(input("linha2: "))
ya = float(input("linha3: "))
yb = float(input("linha4: "))

dab = (sqrt((xb-xa)**2+(yb+ya)**2)
print(round(dab,3))
-- ERROR:
File "XXXX", line 8
    print(round(dab,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:25:29) 
-- CODE:
from math import*
xa = float(input("linha1: "))
xb = float(input("linha2: "))
ya = float(input("linha3: "))
yb = float(input("linha4: "))

dab = (sqrt((xb-xa)**2+(yb-ya)**2)
print(round(dab,3))
-- ERROR:
File "XXXX", line 8
    print(round(dab,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:25:47) 
-- CODE:
from math import*
xa = float(input("linha1: "))
xb = float(input("linha2: "))
ya = float(input("linha3: "))
yb = float(input("linha4: "))

dab = sqrt((xb-xa)**2+(yb-ya)**2)
print(round(dab,3))
-- OUTPUT:
30.806
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:26:31) 
-- CODE:
from math import*
xa = float(input("linha1: "))
ya = float(input("linha2: "))
xb= float(input("linha3: "))
yb = float(input("linha4: "))

dab = sqrt((xb-xa)**2+(yb-ya)**2)
print(round(dab,3))
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:26:50) 
-- CODE:
from math import*
xa = float(input("linha1: "))
ya = float(input("linha2: "))
xb= float(input("linha3: "))
yb = float(input("linha4: "))

dab = sqrt((xb-xa)**2+(yb-ya)**2)
print(round(dab,3))
-- EXECUTION TIME:
0.154025
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:25:38) 
-- CODE:
from math import*
xa = float(input("linha1: "))
ya = float(input("linha2: "))
xb = float(input("linha3: "))
yb = float(input("linha4: "))

dab = sqrt((xb-xa)**2+(yb-ya)**2)
print(round(dab,3))
-- EXECUTION TIME:
0.160764
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:26:08) 
-- CODE:
from math import*
xa = float(input("linha1: "))
ya = float(input("linha2: "))
xb = float(input("linha3: "))
yb = float(input("linha4: "))

dab = sqrt((xb-xa)**2+(yb-ya)**2)
print(round(dab,3))
-- EXECUTION TIME:
0.158457
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:15:54) 
-- CODE:
from math import*
xa = float(input("linha1: "))
ya = float(input("linha2: "))
xb = float(input("linha3: "))
yb = float(input("linha4: "))

dab = sqrt((xb-xa)**2+(yb-ya)**2)
print(round(dab,3))
-- EXECUTION TIME:
0.150943
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:22:50) 
-- CODE:
from math import*
xa = float(input("linha1: "))
ya = float(input("linha2: "))
xb = float(input("linha3: "))
yb = float(input("linha4: "))

dab = sqrt((xb-xa)**2+(yb-ya)**2)
print(round(dab,3))
-- EXECUTION TIME:
0.172027
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:35:40) 
-- CODE:
from math import*
xa = float(input("linha1: "))
ya = float(input("linha2: "))
xb = float(input("linha3: "))
yb = float(input("linha4: "))

dab = sqrt((xb-xa)**2+(yb-ya)**2)
print(round(dab,3))
-- EXECUTION TIME:
0.169326
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:33:04) 
-- CODE:
from math import*
xa = float(input("linha1: "))
ya = float(input("linha2: "))
xb = float(input("linha3: "))
yb = float(input("linha4: "))

dab = sqrt((xb-xa)**2+(yb-ya)**2)
print(round(dab,3))
-- EXECUTION TIME:
0.143809
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:53:00) 
-- CODE:
from math import*
xa = float(input("linha1: "))
ya = float(input("linha2: "))
xb = float(input("linha3: "))
yb = float(input("linha4: "))

dab = sqrt((xb-xa)**2+(yb-ya)**2)
print(round(dab,3))
-- EXECUTION TIME:
0.233533
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
